# robot_kinematics

./: CMakeLists.txt  README.md  dependencies.rosinstall  package.xml  setup.py
robot_kinematics_cpp/: iktestkuka.cpp
robot_kinematics_python/: test_kinematics_UR10_node.py
robot_kinematics_python/generic_kinematics_model/: kinematics.py
robot_kinematics_python/ur_kinematics_model/: ur_kinematics.py
